fix the code md

--- a/Notebook/Lesson1.ipynb
+++ b/Notebook/Lesson1.ipynb
@@ -386,7 +386,12 @@
     "\n",
     "- `sorted` as computing: `assert sorted([3,1,2]) == [1,2,3]`\n",
     "- `.sort` as doing: \n",
-    "    `input = [`"
+    "\n",
+    "    `input = [3,2,1]` # set the state\n",
+    "    \n",
+    "    `input.sort()`\n",
+    "    \n",
+    "    `input == [1,2,3]`"
    ]
   },
   {
