add lesson 3 partial not yet finished

--- a/Notebook/Lesson1.ipynb
+++ b/Notebook/Lesson1.ipynb
@@ -34,10 +34,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -221,24 +219,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Straight Flush: 0.0019 %\n",
-      "        4 kind: 0.0237 %\n",
-      "    Full house: 0.1507 %\n",
-      "         Flush: 0.1967 %\n",
-      "      Straight: 0.3983 %\n",
-      "        3 Kind: 2.1199 %\n",
-      "        2 Pair: 4.7801 %\n",
-      "          Pair: 42.2644 %\n",
-      "     High card: 50.0643 %\n"
+      "        4 kind: 0.0247 %\n",
+      "    Full house: 0.1544 %\n",
+      "         Flush: 0.1861 %\n",
+      "      Straight: 0.3910 %\n",
+      "        3 Kind: 2.1230 %\n",
+      "        2 Pair: 4.7739 %\n",
+      "          Pair: 42.2710 %\n",
+      "     High card: 50.0740 %\n"
      ]
     }
    ],
@@ -281,10 +277,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -293,32 +287,32 @@
       "\n",
       "shuffle_brute(abc) ***BAD***\n",
       "\n",
-      "abc: 4.7\n",
-      "acb:13.5\n",
-      "bac:14.1\n",
-      "bca:26.6\n",
-      "cab:27.1\n",
-      "cba:14.1\n",
+      "abc: 5.2\n",
+      "acb:13.9\n",
+      "bac:14.2\n",
+      "bca:26.9\n",
+      "cab:26.2\n",
+      "cba:13.7\n",
       "\n",
       "shuffle_knuth(abc) ok\n",
       "\n",
-      "abc:16.7\n",
+      "abc:16.5\n",
       "acb:16.4\n",
-      "bac:16.8\n",
-      "bca:16.4\n",
-      "cab:17.1\n",
-      "cba:16.6\n",
+      "bac:16.6\n",
+      "bca:17.0\n",
+      "cab:16.7\n",
+      "cba:16.7\n",
       "\n",
       "\n",
       "shuffle_brute(ab) ***BAD***\n",
       "\n",
-      "ab:17.2\n",
-      "ba:82.8\n",
+      "ab:16.2\n",
+      "ba:83.8\n",
       "\n",
       "shuffle_knuth(ab) ok\n",
       "\n",
-      "ab:49.9\n",
-      "ba:50.1\n",
+      "ab:50.9\n",
+      "ba:49.1\n",
       "\n"
      ]
     }
@@ -385,13 +379,13 @@
     "To test the computing is easier with `assert`:\n",
     "\n",
     "- `sorted` as computing: `assert sorted([3,1,2]) == [1,2,3]`\n",
-    "- `.sort` as doing: \n",
+    "- `.sort()` as doing: \n",
     "\n",
-    "    `input = [3,2,1]` # set the state\n",
+    "    input = [3,2,1]` # set the state\n",
     "    \n",
-    "    `input.sort()`\n",
+    "    input.sort()`\n",
     "    \n",
-    "    `input == [1,2,3]`"
+    "    input == [1,2,3]`"
    ]
   },
   {
@@ -415,7 +409,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 2.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
