--- a/Notebook/Lesson3.ipynb
+++ b/Notebook/Lesson3.ipynb
@@ -521,9 +521,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--> fib(6)\n   --> fib(5)\n      --> fib(4)\n         --> fib(3)\n            --> fib(2)\n               --> fib(1)\n               <-- fib(1) == 1\n               --> fib(0)\n               <-- fib(0) == 1\n            <-- fib(2) == 2\n            --> fib(1)\n            <-- fib(1) == 1\n         <-- fib(3) == 3\n         --> fib(2)\n            --> fib(1)\n            <-- fib(1) == 1\n            --> fib(0)\n            <-- fib(0) == 1\n         <-- fib(2) == 2\n      <-- fib(4) == 5\n      --> fib(3)\n         --> fib(2)\n            --> fib(1)\n            <-- fib(1) == 1\n            --> fib(0)\n            <-- fib(0) == 1\n         <-- fib(2) == 2\n         --> fib(1)\n         <-- fib(1) == 1\n      <-- fib(3) == 3\n   <-- fib(5) == 8\n   --> fib(4)\n      --> fib(3)\n         --> fib(2)\n            --> fib(1)\n            <-- fib(1) == 1\n            --> fib(0)\n            <-- fib(0) == 1\n         <-- fib(2) == 2\n         --> fib(1)\n         <-- fib(1) == 1\n      <-- fib(3) == 3\n      --> fib(2)\n         --> fib(1)\n         <-- fib(1) == 1\n         --> fib(0)\n         <-- fib(0) == 1\n      <-- fib(2) == 2\n   <-- fib(4) == 5\n<-- fib(6) == 13\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "13"
+      ]
+     },
+     "execution_count": 50,
+     "output_type": "execute_result",
+     "metadata": {}
+    }
+   ],
    "source": [
     "# ---------------\n",
     "# User Instructions\n",
@@ -580,7 +598,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    ""
+    "def disabled(f): return f\n",
+    "trace = disabled"
    ]
   }
  ],
